src/main/java/com/example/solid/openClosed/example2/good/CurrentAccount.java
package com.example.solid.openClosed.example2.good;

import java.math.BigDecimal;

public class CurrentAccount extends Account{

    @Override
    void deposit(BigDecimal amount) {
        //
    }

    @Override
    void withdraw(BigDecimal amount) {
        //
    }
}
