src/main/java/com/example/solid/openClosed/example2/bad/CurrentAccount.java
package com.example.solid.openClosed.example2.bad;

import java.math.BigDecimal;

public class CurrentAccount {
    void deposit(BigDecimal bigDecimal){
        //
    }

    void withDraw(BigDecimal bigDecimal){
        //
    }
}
